--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,11 @@
     <title>Prueba</title>
 </head>
 <body>
-    <h1>Este es el Blog</h1>
-    <p>Jejejee que mañana trabajo</p>
+    <div id="container">
+        <div id="post">
+            <h1>Este es el Blog</h1>
+            <p>Jejejee que mañana trabajo, no estudie durante toda la semana:( ya quiero aprender css, me encanta muchisimo y quieor hacer el curso de diseño grafico</p>
+        </div>
+    </div>
 </body>
 </html>
