Estructura inicial de la cabcera

--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="header">
+            Aquí inicia la cabecera
+        </div>
         <div id="post">
             <h1>Este es el Blog</h1>
             <p>Jejejee que mañana trabajo, no estudie durante toda la semana:( ya quiero aprender css, me encanta muchisimo y quieor hacer el curso de diseño grafico</p>
