finalizada la cabecera

--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,10 @@
 <body>
     <div id="container">
         <div id="header">
-            Aquí inicia la cabecera
+            Hyperblog
+            <span id="tagline">
+                Tu Blog de confianza
+            </span>
         </div>
         <div id="post">
             <h1>Este es el Blog</h1>
