--- a/blog.html
+++ b/blog.html
@@ -11,6 +11,7 @@
         <div id="post">
             <h1>Este es el Blog</h1>
             <p>Jejejee que mañana trabajo, no estudie durante toda la semana:( ya quiero aprender css, me encanta muchisimo y quieor hacer el curso de diseño grafico</p>
+            <p>Los pollitos dicen pio pio pio cuando tienen hambre, cuando tienen frio, la mamá les busca el maiz y el trigo, les da la comida y les presta abrigo, bajo sus dos alas acurrucaditos duermen los pollitos, hasta el otro día</p>
         </div>
     </div>
 </body>
