Color de fondo, logo nuevo y mejor color de header

--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,7 @@
 <body>
     <div id="container">
         <div id="header">
+            <img id="icono" src="imagenes/icono.png"/>
             Hyperblog
             <span id="tagline">
                 Tu Blog de cabecera
