Agregado el pie de pagina

--- a/blog.html
+++ b/blog.html
@@ -20,6 +20,9 @@
             <p>Los pollitos dicen pio pio pio cuando tienen hambre, cuando tienen frio, la mamá les busca el maiz y el trigo, les da la comida y les presta abrigo, bajo sus dos alas acurrucaditos duermen los pollitos, hasta el otro día</p>
             <p>Suscrite y dale like</p>
         </div>
+        <div id="footer">
+            <p>Hecho con amor</p>
+        </div>
     </div>
 </body>
 </html>
