--- a/blog.html
+++ b/blog.html
@@ -17,8 +17,8 @@
         </div>
         <div id="post">
             <h1>Este es el Blog</h1>
-            <p>Jejejee que mañana trabajo, no estudie durante toda la semana:( ya quiero aprender css, me encanta muchisimo y quieor hacer el curso de diseño grafico</p>
-            <p>Los pollitos dicen pio pio pio cuando tienen hambre, cuando tienen frio, la mamá les busca el maiz y el trigo, les da la comida y les presta abrigo, bajo sus dos alas acurrucaditos duermen los pollitos, hasta el otro día</p>
+            <p>Jejejee que mañana trabajo, no estudie durante toda la semana:( ya quiero aprender css, me encanta muchisimo y quiero hacer el curso de diseño grafico</p>
+            <p>Los pollitos dicen pio pio pio cuando tienen hambre, cuando tienen frio, la mamá les busca el maíz y el trigo, les da la comida y les presta abrigo, bajo sus dos alas acurrucaditos duermen los pollitos, hasta el otro día</p>
             <p>Suscrite y dale like</p>
         </div>
         <div id="footer">
